--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,13 +6,17 @@ include_directories(include)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /EHsc /utf-8")
 set(CMAKE_CXX_FLAGS "/utf-8")
 
-set(MAPS_DIR "${CMAKE_SOURCE_DIR}/scr/maps")
-add_definitions(-DMAPS_DIR="${CMAKE_SOURCE_DIR}/scr/maps")
+set(MAPS_DIR "${CMAKE_SOURCE_DIR}/lib/maps")
+
+set(PICS_DIR "${CMAKE_SOURCE_DIR}/lib/pic")
+
+add_definitions(-DMAPS_DIR="${CMAKE_SOURCE_DIR}/lib/maps")
+
+add_definitions(-DPICS_DIR="${CMAKE_SOURCE_DIR}/lib/pic")
 
 set(EasyX_DIR "${CMAKE_SOURCE_DIR}/EasyX")  # EasyX 目录
 include_directories(${EasyX_DIR}/include)  # 头文件路径
 link_directories(${EasyX_DIR}/lib/VC2015/x64)  # 库文件路径
-
 link_libraries(EasyXa EasyXw)  # 连接 EasyX 库
 
 
